[package]
name = "xcb-code-generator"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
codegen-rs = { git = "https://github.com/MarcusGrass/codegen-rs", branch = "main" }
xcb-xsd = { path = "../xcb-xsd" }
