[package]
name = "xcb-rust-protocol"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
readme = "../Readme.md"
repository = "https://github.com/MarcusGrass/xcb-rust"
homepage = "https://github.com/MarcusGrass/xcb-rust"
description = "Rust x11 connection interface layer"
documentation = "https://docs.rs/xcb-rust-protocol"
categories = ["external-ffi-bindings", "no-std", "os"]
keywords = ["ffi", "bindings", "x11", "xorg", "linux"]

[dependencies]
tiny-std = { workspace = true }

[features]
debug = []
all = ["bigreq", "composite", "damage", "dbe", "dpms", "dri2", "dri3", "ge", "glx", "present", "randr", "record", "render", "res", "screensaver", "shape", "shm", "sync", "xc_misc", "xevie", "xf86dri", "xf86vidmode", "xfixes", "xinerama", "xinput", "xkb", "xprint", "xproto", "xselinux", "xtest", "xv", "xvmc"]
bigreq = []
composite = ["xproto", "xfixes"]
damage = ["xproto", "xfixes"]
dbe = ["xproto"]
dpms = []
dri2 = ["xproto"]
dri3 = ["xproto"]
ge = []
glx = ["xproto"]
present = ["xproto", "randr", "xfixes", "sync"]
randr = ["xproto", "render"]
record = []
render = ["xproto"]
res = ["xproto"]
screensaver = ["xproto"]
shape = ["xproto"]
shm = ["xproto"]
sync = ["xproto"]
xc_misc = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["xproto", "render", "shape"]
xinerama = ["xproto"]
xinput = ["xfixes", "xproto"]
xkb = ["xproto"]
xprint = ["xproto"]
xproto = []
xselinux = ["xproto"]
xtest = ["xproto"]
xv = ["xproto", "shm"]
xvmc = ["xv"]
